// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Dictionary > can index and search a dictionary 1`] = `
[
  {
    "etymologies": [
      {
        "description": "Latin root",
        "senses": {
          "n": {
            "definitions": [
              "(vertebrates) To move swiftly",
              "Act or instance of hurrying (to or from a place) (not necessarily by foot); dash or errand, trip.",
              "A pleasure trip.",
              "Flight, instance or period of fleeing.",
              "Migration (of fish).",
              "A group of fish that migrate, or ascend a river for the purpose of spawning.",
            ],
            "pos": "n",
            "tags": [],
          },
          "v": {
            "definitions": [
              {
                "definitions": [
                  "(vertebrates) To move swiftly (figuratively)",
                  "(fluids) To flow.",
                  "(nautical, of a vessel) To sail before the wind, in distinction from reaching or sailing close-hauled.",
                  "(social) To carry out an activity.",
                  "To extend or persist, statically or dynamically, through space or time.",
                  "(transitive) To execute or carry out a plan, procedure or program.",
                ],
                "description": "A number of verb senses",
              },
            ],
            "pos": "v",
            "tags": [],
          },
        },
      },
    ],
    "forms": [],
    "term": "run",
    "translations": [],
  },
]
`;

exports[`Dictionary > lookup > can split terms 1`] = `
[
  {
    "entry": {
      "etymologies": [
        {
          "description": "Latin root",
          "senses": {
            "n": {
              "definitions": [
                "a cat",
              ],
              "pos": "n",
              "tags": [],
            },
          },
        },
      ],
      "forms": [],
      "term": "cat",
      "translations": [],
    },
  },
  {
    "entry": {
      "etymologies": [
        {
          "description": "Latin root",
          "pronunciation": "dooooog",
          "senses": {
            "un": {
              "definitions": [
                "a dog",
              ],
              "pos": "un",
              "tags": [],
            },
          },
        },
      ],
      "forms": [],
      "term": "dog",
      "translations": [],
    },
  },
]
`;

exports[`Dictionary > lookup > looks up terms properly 1`] = `
[
  {
    "entry": {
      "etymologies": [
        {
          "description": "Latin root",
          "senses": {
            "n": {
              "definitions": [
                "a cat",
              ],
              "pos": "n",
              "tags": [],
            },
          },
        },
      ],
      "forms": [],
      "term": "cat",
      "translations": [],
    },
  },
]
`;

exports[`Dictionary > should tokenize text and find entries 1`] = `
[
  {
    "end": 2,
    "entries": [
      {
        "entry": {
          "etymologies": [
            {
              "description": "Latin root",
              "senses": {
                "v": {
                  "definitions": [
                    "Lorem ipsum",
                  ],
                  "pos": "v",
                  "tags": [],
                },
              },
            },
          ],
          "forms": [],
          "term": "你",
          "translations": [],
        },
      },
      {
        "entry": {
          "etymologies": [
            {
              "description": "Latin root",
              "senses": {
                "v": {
                  "definitions": [
                    "Lorem ipsum",
                  ],
                  "pos": "v",
                  "tags": [],
                },
              },
            },
          ],
          "forms": [],
          "term": "好",
          "translations": [],
        },
      },
    ],
    "kind": "Unknown",
    "language": "cmn",
    "lemma": "你好",
    "script": "Mandarin",
    "start": 0,
  },
  {
    "end": 3,
    "entries": [],
    "kind": "Unknown",
    "lemma": "！",
    "script": "Hangul",
    "start": 2,
  },
  {
    "end": 4,
    "entries": [
      {
        "entry": {
          "etymologies": [
            {
              "description": "Latin root",
              "senses": {
                "v": {
                  "definitions": [
                    "Lorem ipsum",
                  ],
                  "pos": "v",
                  "tags": [],
                },
              },
            },
          ],
          "forms": [],
          "term": "你",
          "translations": [],
        },
      },
    ],
    "kind": "Unknown",
    "language": "cmn",
    "lemma": "你",
    "script": "Mandarin",
    "start": 3,
  },
  {
    "end": 5,
    "entries": [],
    "kind": "Unknown",
    "language": "cmn",
    "lemma": "是",
    "script": "Mandarin",
    "start": 4,
  },
  {
    "end": 6,
    "entries": [],
    "kind": "Unknown",
    "language": "cmn",
    "lemma": "谁",
    "script": "Mandarin",
    "start": 5,
  },
  {
    "end": 7,
    "entries": [],
    "kind": "Unknown",
    "lemma": "？",
    "script": "Hangul",
    "start": 6,
  },
]
`;
